syntax = "proto3";

option csharp_namespace = "Gen.IdentityService.Enums";

enum ApplicationUserRole {
    DEVELOPER = 0;
    ADMIN = 1;
    CLIENT = 2;
}